# QuincyFigurine

./: GUI.py  README.md  comms.py  main.py  pyproject.toml  requirements.txt
